project(priority_queue)
cmake_minimum_required(VERSION 3.1)
set (CMAKE_CXX_STANDARD 11)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS "-Wall -Wextra -fPIC")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
#set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
#set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

add_library(vector priority_que_vector.cpp)
add_library(heap priority_que_heap.cpp)
add_library(dllist priority_que_dllist.cpp)

add_executable(main main.cpp)
target_link_libraries(main vector heap dllist)